--- a/SmartLearn/SmartLearn/Web.config
+++ b/SmartLearn/SmartLearn/Web.config
@@ -41,7 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Courses_DBEntities" connectionString="metadata=res://*/CoursesModel.csdl|res://*/CoursesModel.ssdl|res://*/CoursesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AKLBC18;initial catalog=Courses_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Courses_DBEntities" connectionString="metadata=res://*/Data.CoursesModel.csdl|res://*/Data.CoursesModel.ssdl|res://*/Data.CoursesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AKLBC18;initial catalog=Courses_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
